<resources>
    <string name="app_name">Stocks Watch</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_portfolio">Portfolio</string>
    <string name="title_notifications">Notifications</string>
    <string name="watchlist_empty">Stocks watch list will show here.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="dashboard">Dashboard</string>
    <string name="your_watchlist">Your Watchlist</string>
    <string name="choose">Choose your interests to follow and trade on your terms.</string>
    <string name="follow">Follow</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="phone_number">phone number</string>
    <string name="otp">OTP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="didnt_receive_an_otp">Did not receive an OTP?</string>
    <string name="sign_in">Sign In</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submit">Submit</string>
    <string name="register">Login</string>
</resources>
